# NuSE

./: README.md
SE/: COPYING  Doxyfile  Makefile.in  README  config.h.in  configure  configure.ac
SE/docs/: README  cleanlatex  nugrid.sty  runlatex  useepp-chapter.tex  useepp.tex
SE/include/: FSE.fi  FSE_f90.fi  SE.h  SEerror.h  SEevol.h
SE/src/: FSE.c  FSE.h  FSEevol.h  Makefile.am  Makefile.in  SEattr.c  SEerror.c  SEevol.c  SEopen.c  SEprivateopen.c  SEprivateopen.h  SEprivatequery.c  SEprivatequery.h  SEquery.c  SEread.c  SEwrite.c  touchse.c
SE/tests/: Makefile.am  Makefile.in  evolout  f77  f77varargs  fsewrite.f  main.c  overwrite  testbackup.c  testio.f  tests.c  tests.h  unit
check_se/: fix_cycs.py  test_se.py
check_se/DOC/: check_se.aux  check_se.tex
check_se/HDF5_test/: INFO  copy_H5groups.py  hdf5_report_set1.1_11_27_14.txt  hdf5_report_set1.2_11_27_14.txt  miss_corr_badplace_HDF5finder.py  se.py  test_hdf5.py  test_hdf5_sets.sh
check_se/HDF5_test/DOC/: check_se-chapter.tex  runlatex
check_se/old_scripts/: elem_massf.py  fixed_cycs_orig.py
write_se/: HOWTO.txt  M2.00Z2.0e-02.0000001.se.h5_convHcen  example.se.h5  h5T.py  mixburn.se.h5  se.py  sewrite.py  write_convHcore.py  write_mixburn_se.py  write_se_example.py
